--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -2,5 +2,7 @@
     "login": "Iniciar sesión",
     "email": "Correo electronico",
     "password": "Contraseña",
-    "required": "Todos los campos son obligatorios"
+    "required": "Todos los campos son obligatorios",
+    "accessDeneged": "Acceso denegado",
+    "errorOccurred": "Ocurrió un error, contacte al Administrador"
 }
