--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -22,5 +22,9 @@
     "accept": "Accept",
     "products": "Products",
     "users": "Users",
-    "exit": "Exit"
+    "exit": "Exit",
+    "home": "Home",
+    "contactUs": "Contact Us",
+    "order": "Order"
+
 }
