--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -22,5 +22,8 @@
     "accept": "Aceptar",
     "products": "Productos",
     "users": "Usuarios",
-    "exit": "Salir"
+    "exit": "Salir",
+    "home": "Inicio",
+    "contactUs": "Contáctenos",
+    "order": "Pedir"
 }
