--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -25,5 +25,7 @@
     "exit": "SALIR",
     "home": "INICIO",
     "contactUs": "CONTACTENOS",
-    "order": "PEDIR"
+    "order": "PEDIR",
+    "life": "Vive",
+    "disfrut": "Y DISFRUTA"
 }
