--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -25,6 +25,8 @@
     "exit": "ESXIT",
     "home": "HOME",
     "contactUs": "CONTACT US",
-    "order": "ORDER"
+    "order": "ORDER",
+    "life": "Life",
+    "disfrut": "AND DISFRUT"
 
 }
