--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -27,6 +27,6 @@
     "contactUs": "CONTACT US",
     "order": "ORDER",
     "life": "Life",
-    "disfrut": "AND DISFRUT"
-
+    "disfrut": "AND DISFRUT",
+    "moreText": "enjoy our cozy bar, where every drink tells stories and unique experiences.  we are ready to surprise you with original creations and reinvented classics. come here and find a place where good company and good drinks are the best way to enjoy a good time. "
 }
