--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -30,6 +30,8 @@
     "disfrut": "Y DISFRUTA",
     "moreText": "Disfruta de nuestro acogedor bar, donde cada trago cuenta una historia y una experiencia única. Estamos listos para sorprenderte con creaciones originales y clásicos reinventados. Ven y descubre un lugar donde la buena compañía y los buenos tragos se encuentran.",
     "whoAre":"¿Quiénes somos?",
-    "aboutUs":"¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!"
+    "aboutUs":"¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!",
+    "cold": "FRIA",
+    "cold2": "QUE TAL UNA FRIA"
 
 }
