--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -32,6 +32,7 @@
     "whoAre":"Who are we?",
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
-    "cold2": "HOW ABOUT A"
+    "cold2": "HOW ABOUT A",
+    "banner": "Just ask for it, we'll take care of the rest.\n Bring moments to life with a fria."
 
 }
