--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
     "accept": "Accept",
     "products": "PRODUCTS",
     "users": "USERS",
-    "exit": "ESXIT",
+    "exit": "EXIT",
     "home": "HOME",
     "contactUs": "CONTACT US",
     "order": "ORDER",
@@ -33,6 +33,24 @@
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
     "cold2": "HOW ABOUT A",
-    "banner": "Just ask for it, we'll take care of the rest.\n Bring moments to life with a fria."
-
+    "banner": "Just ask for it, we'll take care of the rest.\n Bring moments to life with a fria.",
+    "add": "Add",
+    "status": "Status",
+    "rol": "Role",
+    "user": "user",
+    "requiredUser": "The name is required",
+    "requiredEmail": "Email is mandatory",
+    "requiredPassword": "Password is required",
+    "requiredStatus": "The state is mandatory",
+    "requiredRol": "The role is required",
+    "invalidEmail": "The email is not valid",
+    "minPassword": "The password must be a minimum of 3 characters",
+    "saveUser": "User successfully added",
+    "editUser": "User edited successfully",
+    "aggregate": "Aggregate",
+    "edited": "Edited",
+    "removed": "Removed",
+    "deleteUser": "Successfully deleted user",
+    "paginteUser": "Users per page",
+    "of": "of"
 }
