--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -1,56 +1,50 @@
 {
-    "login": "Login",
-    "email": "Email",
-    "password": "Password",
-    "required": "All fields are required",
-    "accessDeneged": "Access deneged",
-    "errorOccurred": "An error occurred, contact the Administrator",
-    "events": "EVENTS",
+    "login": "Log in",
     "name": "Name",
-    "date": "Date",
     "actions": "Actions",
     "edit": "Edit",
     "delete": "Delete",
     "cancel": "Cancel",
     "confirm": "Confirm",
-    "alertConfirm": "¿Are u sure to delete this event?",
-    "alertDelete":  "!This action  can't be undone¡",
-    "successDelete": "Event deleted",
-    "errorDelete": "Error to delete event",
-    "addEvent": "Add event",
-    "GeneralError": "An unexpected error has occurred",
+    "dateEvent": "Event Date",
+    "email": "Email",
+    "password": "Password",
+    "event": "Event",
     "accept": "Accept",
+    "add": "Add",
+    "status": "Status",
+    "rol": "Role",
+    "user": "User",
+    "required": "All fields are required",
+    "accessDeneged": "Access denied",
+    "errorOccurred": "An error occurred, please contact the Administrator",
+    "requiredUser": "Name is required",
+    "requiredEmail": "Email is required",
+    "requiredPassword": "Password is required",
+    "requiredStatus": "Status is required",
+    "requiredRol": "Role is required",
+    "invalidEmail": "Invalid email address",
+    "minPassword": "Password must be at least 3 characters long",
+    "saveUser": "User added successfully",
+    "editUser": "User edited successfully",
+    "aggregate": "Added",
+    "edited": "Edited",
+    "removed": "Removed",
+    "deleteUser": "User deleted successfully",
+    "of": "of",
+    "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
     "exit": "EXIT",
     "home": "HOME",
     "contactUs": "CONTACT US",
     "order": "ORDER",
-    "life": "Life",
-    "disfrut": "AND DISFRUT",
-    "moreText": "enjoy our cozy bar, where every drink tells stories and unique experiences.  we are ready to surprise you with original creations and reinvented classics. come here and find a place where good company and good drinks are the best way to enjoy a good time. ",
-    "whoAre":"Who are we?",
-    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
+    "life": "Live",
+    "enjoy": "And Enjoy",
+    "moreText": "Enjoy our cozy bar, where each drink tells a story and offers a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
+    "whoAre": "Who Are We?",
+    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá, av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
-    "cold2": "HOW ABOUT A",
-    "banner": "Just ask for it, we'll take care of the rest.\n Bring moments to life with a fria.",
-    "add": "Add",
-    "status": "Status",
-    "rol": "Role",
-    "user": "user",
-    "requiredUser": "The name is required",
-    "requiredEmail": "Email is mandatory",
-    "requiredPassword": "Password is required",
-    "requiredStatus": "The state is mandatory",
-    "requiredRol": "The role is required",
-    "invalidEmail": "The email is not valid",
-    "minPassword": "The password must be a minimum of 3 characters",
-    "saveUser": "User successfully added",
-    "editUser": "User edited successfully",
-    "aggregate": "Aggregate",
-    "edited": "Edited",
-    "removed": "Removed",
-    "deleteUser": "Successfully deleted user",
-    "paginteUser": "Users per page",
-    "of": "of"
+    "cold2": "HOW ABOUT A COLD ONE",
+    "banner": "Just order it, we'll take care of the rest. Bring moments to life with a cold one."
 }
