--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -1,25 +1,39 @@
 {
     "login": "Iniciar sesión",
-    "email": "Correo electrónico",
-    "password": "Contraseña",
-    "required": "Todos los campos son obligatorios",
-    "accessDeneged": "Acceso denegado",
-    "errorOccurred": "Ocurrió un error, contacte al Administrador",
-    "events": "EVENTOS",
     "name": "Nombre",
-    "date": "Fecha",
+    "nameEvent": "Nombre del evento",
     "actions": "Acciones",
     "edit": "Editar",
     "delete": "Eliminar",
     "cancel": "Cancelar",
     "confirm": "Confirmar",
-    "alertConfirm": "¿Estás seguro de eliminar este evento?",
-    "alertDelete": "!Esta acción no se puede deshacer¡",
-    "successDelete": "El evento se elimino correctamente",
-    "errorDelete": "El evento no se pudo eliminar",
-    "addEvent": "Agregar evento",
-    "GeneralError": "Ha ocurrido un error inesperado",
+    "dateEvent": "Fecha de evento",
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "event": "evento",
     "accept": "Aceptar",
+    "add": "Agregar",
+    "status": "Estado",
+    "rol": "Rol",
+    "user": "usuario",
+    "required": "Todos los campos son obligatorios",
+    "accessDeneged": "Acceso denegado",
+    "errorOccurred": "Ocurrió un error, contacte al Administrador",
+    "requiredUser": "El nombre es obligatorio",
+    "requiredEmail": "El correo electrónico es obligatorio",
+    "requiredPassword": "La contraseña es obligatoria",
+    "requiredStatus": "El estado es obligatorio",
+    "requiredRol": "El rol es obligatorio",
+    "invalidEmail": "El correo electrónico no es valido",
+    "minPassword": "La contraseña debe ser mínimo de 3 caracteres",
+    "saveUser": "Usuario agregado correctamente",
+    "editUser": "Usuario editado correctamente",
+    "aggregate": "Agregado",
+    "edited": "Editado",
+    "removed": "Eliminado",
+    "deleteUser": "Usuario eliminado correctamente",
+    "of": "de",
+    "events": "EVENTOS",
     "products": "PRODUCTOS",
     "users": "USUARIOS",
     "exit": "SALIR",
@@ -33,24 +47,5 @@
     "aboutUs":"¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!",
     "cold": "FRIA",
     "cold2": "QUE TAL UNA FRIA",
-    "banner": "Solo pidela, nosotros nos encargamos del resto. Ponle vida a los momentos con una fria.",
-    "add": "Agregar",
-    "status": "Estado",
-    "rol": "Rol",
-    "user": "usuario",
-    "requiredUser": "El nombre es obligatorio",
-    "requiredEmail": "El correo es obligatorio",
-    "requiredPassword": "La contraseña es obligatoria",
-    "requiredStatus": "El estado es obligatorio",
-    "requiredRol": "El rol es obligatorio",
-    "invalidEmail": "El correo electrónico no es valido",
-    "minPassword": "La contraseña debe ser mínimo de 3 caracteres",
-    "saveUser": "Usuario agregado correctamente",
-    "editUser": "Usuario editado correctamente",
-    "aggregate": "Agregado",
-    "edited": "Editado",
-    "removed": "Eliminado",
-    "deleteUser": "Usuario eliminado correctamente",
-    "paginteUser": "Usuarios por página",
-    "of": "de"
+    "banner": "Solo pidela, nosotros nos encargamos del resto. Ponle vida a los momentos con una fria."
 }
