Form CRUD event frontend

--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -1,12 +1,14 @@
 {
     "login": "Log in",
     "name": "Name",
+    "nameEvent": "Event Name",
     "actions": "Actions",
     "edit": "Edit",
     "delete": "Delete",
     "cancel": "Cancel",
     "confirm": "Confirm",
     "dateEvent": "Event Date",
+    "timeEvent": "Event Time",
     "email": "Email",
     "password": "Password",
     "event": "Event",
@@ -15,23 +17,29 @@
     "status": "Status",
     "rol": "Role",
     "user": "User",
+    "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
-    "accessDeneged": "Access denied",
+    "accessDenied": "Access denied",
     "errorOccurred": "An error occurred, please contact the Administrator",
-    "requiredUser": "Name is required",
+    "requiredNameUser": "Name is required",
+    "requiredNameEvent": "Event name is required",
+    "requiredDateEvent": "Event date is required",
+    "requiredTimeEvent": "Event time is required",
     "requiredEmail": "Email is required",
     "requiredPassword": "Password is required",
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
-    "invalidEmail": "Invalid email address",
-    "minPassword": "Password must be at least 3 characters long",
+    "invalidEmail": "Invalid email",
+    "minPassword": "Password must be at least 3 characters",
     "saveUser": "User added successfully",
+    "saveEvent": "Event added successfully",
     "editUser": "User edited successfully",
+    "editEvent": "Event edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
-    "removed": "Removed",
+    "removed": "Deleted",
     "deleteUser": "User deleted successfully",
-    "of": "of",
+    "deleteEvent": "Event deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -41,10 +49,10 @@
     "order": "ORDER",
     "life": "Live",
     "enjoy": "And Enjoy",
-    "moreText": "Enjoy our cozy bar, where each drink tells a story and offers a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
+    "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
     "whoAre": "Who Are We?",
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá, av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
     "cold2": "HOW ABOUT A COLD ONE",
-    "banner": "Just order it, we'll take care of the rest. Bring moments to life with a cold one."
+    "banner": "Just ask for it, we'll take care of the rest. Bring life to the moments with a cold one."
 }
