--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -7,7 +7,8 @@
     "delete": "Eliminar",
     "cancel": "Cancelar",
     "confirm": "Confirmar",
-    "dateEvent": "Fecha de evento",
+    "dateEvent": "Fecha del evento",
+    "timeEvent": "Hora del evento",
     "email": "Correo electrónico",
     "password": "Contraseña",
     "event": "evento",
@@ -16,10 +17,14 @@
     "status": "Estado",
     "rol": "Rol",
     "user": "usuario",
+    "invalidTime": "La hora ingresada es menor que la hora actual",
     "required": "Todos los campos son obligatorios",
     "accessDeneged": "Acceso denegado",
     "errorOccurred": "Ocurrió un error, contacte al Administrador",
-    "requiredUser": "El nombre es obligatorio",
+    "requiredNameUser": "El nombre es obligatorio",
+    "requiredNameEvent": "El nombre del evento es obligatorio",
+    "requiredDateEvent": "La fecha del evento es obligatorio",
+    "requiredTimeEvent": "La hora del evento es obligatorio",
     "requiredEmail": "El correo electrónico es obligatorio",
     "requiredPassword": "La contraseña es obligatoria",
     "requiredStatus": "El estado es obligatorio",
@@ -27,12 +32,14 @@
     "invalidEmail": "El correo electrónico no es valido",
     "minPassword": "La contraseña debe ser mínimo de 3 caracteres",
     "saveUser": "Usuario agregado correctamente",
+    "saveEvent": "Evento agregado correctamente",
     "editUser": "Usuario editado correctamente",
+    "editEvent": "Evento editado correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
     "removed": "Eliminado",
     "deleteUser": "Usuario eliminado correctamente",
-    "of": "de",
+    "deleteEvent": "Evento eliminado correctamente",
     "events": "EVENTOS",
     "products": "PRODUCTOS",
     "users": "USUARIOS",
