services-table-rol-status

--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -2,6 +2,7 @@
     "login": "Iniciar sesión",
     "name": "Nombre",
     "nameEvent": "Nombre del evento",
+    "nameRol": "Nombre del rol",
     "actions": "Acciones",
     "edit": "Editar",
     "delete": "Eliminar",
@@ -16,6 +17,7 @@
     "add": "Agregar",
     "status": "Estado",
     "rol": "Rol",
+    "rols": "rol",
     "user": "usuario",
     "invalidTime": "La hora ingresada es menor que la hora actual",
     "required": "Todos los campos son obligatorios",
@@ -32,8 +34,10 @@
     "invalidEmail": "El correo electrónico no es valido",
     "minPassword": "La contraseña debe ser mínimo de 3 caracteres",
     "saveUser": "Usuario agregado correctamente",
+    "saveRol": "Rol agregado correctamente",
     "saveEvent": "Evento agregado correctamente",
     "editUser": "Usuario editado correctamente",
+    "editRol": "Rol editado correctamente",
     "editEvent": "Evento editado correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
