CRUD product list-add

--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
     "status": "Status",
     "rol": "Role",
     "user": "User",
+    "filter": "Filter",
     "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
     "accessDenied": "Access denied",
