--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
     "name": "Name",
     "nameEvent": "Event Name",
     "nameRol": "Rol Name",
+    "nameStatus": "Status Name",
     "actions": "Actions",
     "edit": "Edit",
     "delete": "Delete",
@@ -36,6 +37,7 @@
     "saveUser": "User added successfully",
     "saveEvent": "Event added successfully",
     "saveRol": "Rol added successfully",
+    "saveStatus": "Status added successfully",
     "editUser": "User edited successfully",
     "editEvent": "Event edited successfully",
     "editRol": "Rol edited successfully",
@@ -44,6 +46,8 @@
     "removed": "Deleted",
     "deleteUser": "User deleted successfully",
     "deleteEvent": "Event deleted successfully",
+    "deleteStatus": "Status deleted successfully",
+    "deleteRol": "Rol deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
