--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -3,6 +3,7 @@
     "name": "Nombre",
     "nameEvent": "Nombre del evento",
     "nameRol": "Nombre del rol",
+    "nameStatus": "Nombre del estado",
     "actions": "Acciones",
     "edit": "Editar",
     "delete": "Eliminar",
@@ -15,7 +16,7 @@
     "event": "evento",
     "accept": "Aceptar",
     "add": "Agregar",
-    "status": "Estado",
+    "status": "estado",
     "rol": "Rol",
     "rols": "rol",
     "user": "usuario",
@@ -36,6 +37,7 @@
     "saveUser": "Usuario agregado correctamente",
     "saveRol": "Rol agregado correctamente",
     "saveEvent": "Evento agregado correctamente",
+    "saveStatus": "Estado agregado correctamente",
     "editUser": "Usuario editado correctamente",
     "editRol": "Rol editado correctamente",
     "editEvent": "Evento editado correctamente",
@@ -44,6 +46,8 @@
     "removed": "Eliminado",
     "deleteUser": "Usuario eliminado correctamente",
     "deleteEvent": "Evento eliminado correctamente",
+    "deleteStatus": "Estado eliminado correctamente",
+    "deleteRol": "Rol eliminado correctamente",
     "events": "EVENTOS",
     "products": "PRODUCTOS",
     "users": "USUARIOS",
