--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -2,7 +2,11 @@
     "login": "Log in",
     "name": "Name",
     "nameEvent": "Event Name",
-    "nameRol": "Rol Name",
+    "imageProduct": "Product Image",
+    "nameProduct": "Product Name",
+    "price": "Price",
+    "stock": "Quantity",
+    "nameRol": "Role Name",
     "nameStatus": "Status Name",
     "actions": "Actions",
     "edit": "Edit",
@@ -10,22 +14,30 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "dateEvent": "Event Date",
+    "setting": "SETTINGS",
     "timeEvent": "Event Time",
     "email": "Email",
     "password": "Password",
-    "event": "Event",
+    "event": "event",
     "accept": "Accept",
     "add": "Add",
-    "status": "Status",
+    "status": "status",
     "rol": "Role",
-    "rols": "Role",
-    "user": "User",
+    "rolNav": "ROLES",
+    "stateNav": "STATES",
+    "rols": "roles",
+    "user": "user",
     "filter": "Filter",
     "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
-    "accessDenied": "Access denied",
-    "errorOccurred": "An error occurred, please contact the Administrator",
+    "accessDeneged": "Access denied",
+    "errorOccurred": "An error occurred, contact the Administrator",
     "requiredNameUser": "Name is required",
+    "requiredNameProduct": "Product name is required",
+    "requiredImageProduct": "Product image is required",
+    "requiredPrice": "Price is required",
+    "requiredStock": "Quantity is required",
+    "chooseImage": "Select an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -33,22 +45,22 @@
     "requiredPassword": "Password is required",
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
-    "invalidEmail": "Invalid email",
-    "minPassword": "Password must be at least 3 characters",
+    "invalidEmail": "Invalid email address",
+    "minPassword": "Password must be at least 3 characters long",
     "saveUser": "User added successfully",
+    "saveRol": "Role added successfully",
     "saveEvent": "Event added successfully",
-    "saveRol": "Rol added successfully",
     "saveStatus": "Status added successfully",
     "editUser": "User edited successfully",
+    "editRol": "Role edited successfully",
     "editEvent": "Event edited successfully",
-    "editRol": "Rol edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
     "deleteUser": "User deleted successfully",
     "deleteEvent": "Event deleted successfully",
     "deleteStatus": "Status deleted successfully",
-    "deleteRol": "Rol deleted successfully",
+    "deleteRol": "Role deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -56,12 +68,12 @@
     "home": "HOME",
     "contactUs": "CONTACT US",
     "order": "ORDER",
-    "life": "Live",
-    "enjoy": "And Enjoy",
+    "life": "LIVE",
+    "enjoy": "AND ENJOY",
     "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
     "whoAre": "Who Are We?",
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá, av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
     "cold2": "HOW ABOUT A COLD ONE",
-    "banner": "Just ask for it, we'll take care of the rest. Bring life to the moments with a cold one."
+    "banner": "Just order it, we'll take care of the rest. Bring life to the moments with a cold one."
 }
