--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -47,7 +47,8 @@
     "deleteUser": "User deleted successfully",
     "deleteEvent": "Event deleted successfully",
     "deleteStatus": "Status deleted successfully",
-    "deleteRol": "Rol deleted successfully",
+    "deleteRol": "Rol deleted deleted",
+    "deleteTable": "Table deleted deleted",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
