--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -2,6 +2,10 @@
     "login": "Iniciar sesión",
     "name": "Nombre",
     "nameEvent": "Nombre del evento",
+    "imageProduct": "Imagen del producto",
+    "nameProduct": "Nombre del producto",
+    "price": "Precio",
+    "stock": "Cantidad",
     "nameRol": "Nombre del rol",
     "nameStatus": "Nombre del estado",
     "actions": "Acciones",
@@ -10,6 +14,7 @@
     "cancel": "Cancelar",
     "confirm": "Confirmar",
     "dateEvent": "Fecha del evento",
+    "setting": "CONFIGURACIÓN",
     "timeEvent": "Hora del evento",
     "email": "Correo electrónico",
     "password": "Contraseña",
@@ -18,13 +23,21 @@
     "add": "Agregar",
     "status": "estado",
     "rol": "Rol",
+    "rolNav": "ROLES",
+    "stateNav": "ESTADOS",
     "rols": "rol",
     "user": "usuario",
+    "filter": "Filtrar",
     "invalidTime": "La hora ingresada es menor que la hora actual",
     "required": "Todos los campos son obligatorios",
     "accessDeneged": "Acceso denegado",
     "errorOccurred": "Ocurrió un error, contacte al Administrador",
     "requiredNameUser": "El nombre es obligatorio",
+    "requiredNameProduct": "El nombre del producto es obligatorio",
+    "requiredImageProduct": "La imagen del producto es obligatorio",
+    "requiredPrice": "El precio es obligatorio",
+    "requiredStock": "La cantidad es obligatoria",
+    "chooseImage": "Seleccione una imagen",
     "requiredNameEvent": "El nombre del evento es obligatorio",
     "requiredDateEvent": "La fecha del evento es obligatorio",
     "requiredTimeEvent": "La hora del evento es obligatorio",
