--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -23,6 +23,7 @@
     "add": "Add",
     "status": "status",
     "rol": "Role",
+    "table": "Table",
     "rolNav": "ROLES",
     "stateNav": "STATES",
     "rols": "roles",
@@ -51,9 +52,11 @@
     "saveRol": "Role added successfully",
     "saveEvent": "Event added successfully",
     "saveStatus": "Status added successfully",
+    "saveTable": "Table added successfully",
     "editUser": "User edited successfully",
     "editRol": "Role edited successfully",
     "editEvent": "Event edited successfully",
+    "editTable": "Table edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
