--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -23,6 +23,7 @@
     "add": "Agregar",
     "status": "estado",
     "rol": "Rol",
+    "table": "mesa",
     "rolNav": "ROLES",
     "stateNav": "ESTADOS",
     "rols": "rol",
@@ -51,9 +52,11 @@
     "saveRol": "Rol agregado correctamente",
     "saveEvent": "Evento agregado correctamente",
     "saveStatus": "Estado agregado correctamente",
+    "saveTable": "Mesa agregada correctamente",
     "editUser": "Usuario editado correctamente",
     "editRol": "Rol editado correctamente",
     "editEvent": "Evento editado correctamente",
+    "editTable": "Mesa editada correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
     "removed": "Eliminado",
