--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -26,6 +26,7 @@
     "table": "mesa",
     "rolNav": "ROLES",
     "stateNav": "ESTADOS",
+    "tableNav": "MESAS",
     "rols": "rol",
     "user": "usuario",
     "filter": "Filtrar",
@@ -79,5 +80,11 @@
     "aboutUs":"¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!",
     "cold": "FRIA",
     "cold2": "QUE TAL UNA FRIA",
-    "banner": "Solo pidela, nosotros nos encargamos del resto. Ponle vida a los momentos con una fria."
+    "banner": "Solo pidela, nosotros nos encargamos del resto. Ponle vida a los momentos con una fria.",
+    "navUser":"Usuarios",
+    "navEvent":"Eventos",
+    "navRol":"Roles",
+    "navStatus":"Estados",
+    "navTable":"Mesas",
+    "navProduct":"Productos"
 }
