--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -4,10 +4,12 @@
     "nameEvent": "Nombre del evento",
     "imageProduct": "Imagen del producto",
     "nameProduct": "Nombre del producto",
+    "nameUser": "Nombre del usuario",
     "price": "Precio",
     "stock": "Cantidad",
     "nameRol": "Nombre del rol",
     "nameStatus": "Nombre del estado",
+    "nameTable": "Nombre de la mesa",
     "actions": "Acciones",
     "edit": "Editar",
     "delete": "Eliminar",
