finish crud products and union project

--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "nameProduct": "Product Name",
     "nameUser": "User Name",
     "price": "Price",
-    "stock": "Quantity",
+    "stock": "Stock",
     "nameRol": "Role Name",
     "nameStatus": "Status Name",
     "nameTable": "Table Name",
@@ -25,14 +25,14 @@
     "add": "Add",
     "status": "status",
     "rol": "Role",
-    "table": "Table",
+    "table": "table",
     "rolNav": "ROLES",
     "stateNav": "STATES",
     "tableNav": "TABLES",
-    "rols": "rols",
+    "rols": "roles",
     "user": "user",
     "filter": "Filter",
-    "invalidTime": "The entered time is earlier than the current time",
+    "invalidTime": "The entered time is less than the current time",
     "required": "All fields are required",
     "accessDeneged": "Access denied",
     "errorOccurred": "An error occurred, contact the Administrator",
@@ -40,8 +40,8 @@
     "requiredNameProduct": "Product name is required",
     "requiredImageProduct": "Product image is required",
     "requiredPrice": "Price is required",
-    "requiredStock": "Quantity is required",
-    "chooseImage": "Select an image",
+    "requiredStock": "Stock is required",
+    "chooseImage": "Choose an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -50,15 +50,17 @@
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
     "invalidEmail": "Invalid email address",
-    "minPassword": "Password must be at least 3 characters long",
+    "minPassword": "Password must be at least 3 characters",
     "saveUser": "User added successfully",
     "saveRol": "Role added successfully",
     "saveEvent": "Event added successfully",
+    "saveProduct": "Product added successfully",
     "saveStatus": "Status added successfully",
     "saveTable": "Table added successfully",
     "editUser": "User edited successfully",
     "editRol": "Role edited successfully",
     "editEvent": "Event edited successfully",
+    "editProduct": "Product edited successfully",
     "editTable": "Table edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
@@ -66,8 +68,9 @@
     "deleteUser": "User deleted successfully",
     "deleteEvent": "Event deleted successfully",
     "deleteStatus": "Status deleted successfully",
-    "deleteRol": "Rol deleted deleted",
-    "deleteTable": "Table deleted deleted",
+    "deleteProduct": "Product deleted successfully",
+    "deleteRol": "Role deleted successfully",
+    "deleteTable": "Table deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -76,18 +79,19 @@
     "contactUs": "CONTACT US",
     "order": "ORDER",
     "life": "LIVE",
-    "enjoy": "AND ENJOY",
+    "disfrut": "AND ENJOY",
     "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
-    "whoAre": "Who Are We?",
-    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá, av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
+    "whoAre": "Who we are?",
+    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
-    "cold2": "HOW ABOUT A COLD ONE",
-    "banner": "Just order it, we'll take care of the rest. Bring life to the moments with a cold one.",
+    "cold2": "HOW ABOUT A COLD",
+    "banner": "Just order it, we take care of the rest. Bring life to the moments with a cold one.",
     "navUser": "Users",
     "navEvent": "Events",
-    "navRol": "Rols",
-    "navStatus": "Status",
+    "navRol": "Roles",
+    "navStatus": "Statuses",
     "navTable": "Tables",
-    "navProduct":"Products",
-    "statusList": "Status"
+    "navProduct": "Products",
+    "statusList": "Status",
+    "changeImageProduct": "Change product image"
 }
