--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -54,11 +54,13 @@
     "saveUser": "Usuario agregado correctamente",
     "saveRol": "Rol agregado correctamente",
     "saveEvent": "Evento agregado correctamente",
+    "saveProduct": "Producto agregado correctamente",
     "saveStatus": "Estado agregado correctamente",
     "saveTable": "Mesa agregada correctamente",
     "editUser": "Usuario editado correctamente",
     "editRol": "Rol editado correctamente",
     "editEvent": "Evento editado correctamente",
+    "editProduct": "Producto editado correctamente",
     "editTable": "Mesa editada correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
@@ -66,6 +68,7 @@
     "deleteUser": "Usuario eliminado correctamente",
     "deleteEvent": "Evento eliminado correctamente",
     "deleteStatus": "Estado eliminado correctamente",
+    "deleteProduct": "Producto eliminado correctamente",
     "deleteRol": "Rol eliminado correctamente",
     "deleteTable": "Mesa eliminada correctamente",
     "events": "EVENTOS",
@@ -89,5 +92,6 @@
     "navStatus":"Estados",
     "navTable":"Mesas",
     "navProduct":"Productos",
-    "statusList": "Estado"
+    "statusList": "Estado",
+    "changeImageProduct": "Cambiar imagen"
 }
